# Autodidact

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SESSION_REPORT.md  VISION.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yml
.kiro/specs/autodidact-framework/: .config.kiro  design.md  requirements.md
autodidact/: __init__.py  agent.py  cli.py  confidence_evaluator.py  config.py  database.py  document_store.py  events.py  knowledge_store.py  learning_extractor.py  llm_client.py  setup_wizard.py  thought_renderer.py  types.py
autodidact/llm/: __init__.py  backend.py  bedrock.py  ollama.py  openai.py
autodidact/routing/: __init__.py  stages.py
autodidact/setup_wizard/: __init__.py  _console.py  builder.py  discovery.py  flow.py  ollama.py  picker.py  presets.py  prompts.py  smoke.py
autodidact/signals/: __init__.py  grounded_self_assessment.py
benchmarks/: __init__.py  ebbinghaus_decay.py  learning_curve.py  run_all.py  thompson_calibration.py
pitch/: PITCH-VIDEO-SCRIPT.md
prototype/: package.json
prototype/src/: cli.ts  demo-bedrock.ts  demo-real.ts  demo.ts
results/: ebbinghaus_decay.json  learning_curve.json  summary.json  thompson_calibration.json
src/: config.ts  database.ts  index.ts  schemas.ts  types.ts
src/components/: agent.ts  confidence-evaluator.ts  knowledge-store.ts  learning-extractor.ts  self-verification.ts
tests/: __init__.py  conftest.py  test_agent.py  test_agent_config.py  test_bedrock_auth.py  test_bedrock_discovery.py  test_chat_backends.py  test_chunk_size_for_bge.py  test_cli.py  test_confidence_evaluator.py  test_conftest_safety.py  test_cost_tracking.py  test_gsa_prompt_version_optin.py  test_gsa_routing_gate.py  test_init_sanity_checks.py  test_init_wizard_integration.py  test_knowledge_store.py  test_learning_extractor.py  test_llm_client_retry.py  test_ollama_install_flow.py  test_openrouter_discovery.py  test_progress_callbacks.py  test_progress_events.py  test_pypi_release.py  test_refusal_detector.py  test_routing_pipeline.py  test_self_assessment.py  test_setup_wizard.py  test_skip_logprob_on_thinking.py  test_skip_logprobs_in_chat.py  test_streaming_agent.py  test_streaming_cloud.py  test_thought_renderer.py  test_wizard_list_pickers.py  test_wizard_model_verification.py
