[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodidact"
version = "1.0.0"
description = "Self-learning AI agent that gets smarter over time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agent", "self-learning", "local-first", "ollama", "llm", "routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/BuffaloTechRider/autodidact"
Repository = "https://github.com/BuffaloTechRider/autodidact"
Issues = "https://github.com/BuffaloTechRider/autodidact/issues"

dependencies = [
    "numpy>=1.24",
    "faiss-cpu>=1.7",
    "pydantic>=2.0",
    "requests>=2.28",
    "rich>=13.0",
    "typer>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0",
]
bedrock = [
    "boto3>=1.28",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
autodidact = "autodidact.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["autodidact*"]
